fix cards focus + align for mobile

--- a/css/cards.css
+++ b/css/cards.css
@@ -15,7 +15,8 @@
   border-radius: 10px;
   transition: box-shadow 0.3s ease-out;
 }
-.card:hover {
+.card:hover,
+.card:focus {
   box-shadow: 0px 20px 20px var(--box-shadow-color),
     0px 0px 50px var(--box-shadow-color);
 }
@@ -88,5 +89,6 @@
 @media (max-width: 813px) {
   .cards {
     flex-direction: column;
+    align-items: center;
   }
 }
